--- a/firebase.nativescript.json
+++ b/firebase.nativescript.json
@@ -2,14 +2,14 @@
     "external_push_client_only": false,
     "using_ios": true,
     "using_android": true,
-    "firestore": false,
+    "firestore": true,
     "realtimedb": false,
     "authentication": true,
     "remote_config": false,
-    "messaging": false,
+    "messaging": true,
     "crashlytics": false,
     "crash_reporting": false,
-    "storage": false,
+    "storage": true,
     "functions": false,
     "facebook_auth": true,
     "google_auth": true,
