--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     }
   },
   "dependencies": {
-    "@vue/devtools": "5.0.0-beta.3",
     "email-validator": "^2.0.4",
+    "nativescript-camera": "^4.1.1",
+    "nativescript-imagepicker": "^6.0.6",
     "nativescript-loading-indicator": "^2.4.0",
     "nativescript-plugin-firebase": "^7.1.6",
     "nativescript-socket.io": "^0.9.0",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-toast": "^1.4.6",
     "nativescript-vue": "^2.0.0",
-    "nativescript-vue-devtools": "^1.0.0",
-    "tns-core-modules": "^4.2.0"
+    "nativescript-vue-devtools": "^1.1.0",
+    "tns-core-modules": "^4.2.0",
+    "tns-platform-declarations": "^5.1.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@vue/devtools": "^5.0.0-beta.3",
     "babel-loader": "^8.0.2",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
